--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,8 @@ dist/
 *.background.tiff
 
 /guix-build-*
+nbproject/configurations.xml
+nbproject/configurations.xml
+nbproject/private/configurations.xml
+nbproject/private/private.xml
+nbproject/project.xml
